--- a/src/components/Content/content.scss
+++ b/src/components/Content/content.scss
@@ -12,12 +12,92 @@
   }
   .movieSlider {
     display: grid;
-    gap: 6px;
+    gap: 10px;
     transition: all 0.3s linear;
     user-select: none;
     overflow: hidden;
+    padding: 28px 0;
+    scroll-behavior: smooth;
+
     .movieItem {
+      transform: scale(1);
+      max-width: 218px;
+      max-height: 349px;
+      width: 100%;
+      height: 100%;
+      transition: all 0.3s linear;
+      user-select: none;
+      position: relative;
+
+      &:hover {
+        opacity: 1;
+        transform: scale(1.1);
+        z-index: 1;
+      }
+
+      img {
+        border-radius: 30px;
+      }
       .movieName {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
+      .nameEng {
+        color: #7a7a7a;
+      }
+    }
+    .btnLeft {
+      position: absolute;
+      top: 50%;
+      left: 30px;
+      z-index: 2;
+      cursor: pointer;
+      background-color: rgba(0, 0, 0, 0.5);
+      height: 100px;
+      width: 50px;
+      border-radius: 4px;
+      display: flex;
+      align-items: center;
+      transform: translateY(-20%);
+      &:hover {
+        background-color: rgba(0, 0, 0, 0.8);
+      }
+
+      &:hover svg {
+        opacity: 1;
+        transform: scale(1.2);
+      }
+      svg {
+        opacity: 0.7;
+        font-size: 50px;
+        transition: all 0.3s linear;
+      }
+    }
+    .btnRight {
+      position: absolute;
+      top: 50%;
+      right: 30px;
+      z-index: 2;
+      cursor: pointer;
+      background-color: rgba(0, 0, 0, 0.5);
+      height: 100px;
+      width: 50px;
+      border-radius: 4px;
+      display: flex;
+      align-items: center;
+      transform: translateY(-20%);
+      &:hover {
+        background-color: rgba(0, 0, 0, 0.8);
+      }
+      &:hover svg {
+        opacity: 1;
+        transform: scale(1.2);
+      }
+      svg {
+        opacity: 0.7;
+        font-size: 50px;
+        transition: all 0.3s linear;
       }
     }
   }
