--- a/src/components/Intro/intro.scss
+++ b/src/components/Intro/intro.scss
@@ -13,18 +13,20 @@
 
   .introInfo {
     position: absolute;
-    top: 140px;
-    left: 30px;
-    @media screen and (max-width: 800px) {
-      top: 120px;
-      left: 25px;
+    top: 240px;
+    left: 60px;
+    @media screen and (max-width: 1000px) {
+      top: 140px;
+      left: 30px;
     }
 
     .heading {
-      font-size: 60px;
+      text-transform: uppercase;
+      font-weight: 500;
+      font-size: 55px;
       transition: all 0.3s ease;
       @media screen and (max-width: 800px) {
-        font-size: 40px;
+        font-size: 35px;
       }
       @media screen and (max-width: 600px) {
         font-size: 24px;
@@ -35,7 +37,7 @@
       width: 100%;
       line-height: 1.3;
       padding-top: 25px;
-      font-size: 18px;
+      font-size: 22px;
       @media screen and (max-width: 800px) {
         font-size: 16px;
       }
