--- a/src/components/SearchMovie/searchmovie.scss
+++ b/src/components/SearchMovie/searchmovie.scss
@@ -8,7 +8,7 @@
     display: grid;
     gap: 8px;
     &:hover .movieItem {
-      opacity: 0.4;
+      opacity: 0.7;
     }
 
     .movieItem {
@@ -33,12 +33,6 @@
         object-fit: cover;
       }
       span {
-        // left: 0;
-        // right: 0;
-        // bottom: 0;
-        text-align: center;
-        // padding: 4px;
-        // background: rgba(0, 0, 0, 0.5);
         color: rgb(220, 218, 218);
       }
     }
@@ -46,5 +40,6 @@
   .searchError {
     padding: 5rem 8rem;
     color: rgb(220, 218, 218);
+    font-size: 35px;
   }
 }
